--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
-    "react-toastify": "^9.0.8"
+    "react-toastify": "^9.0.8",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
